# commonapi-demo

./: .gitignore  CMakeLists.txt  Makefile  README
fidl/: HelloWorld.fdepl  HelloWorld.fidl  M4Agent.fdepl  M4Agent.fidl
inc/: HelloWorldStubImpl.hpp  M4AgentStubImpl.hpp  M4Interface.h  M4Msg.h
src/: HelloWorldClient.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  M4AgentClient.cpp  M4AgentService.cpp  M4AgentStubImpl.cpp  M4Interface.cpp
